other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/random: 1234abcd
  name: pod02
  namespace: refresh-vols-ns
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
    volumeMounts:
    - mountPath: /mnt/foo
      name: refresh-vol
  volumes:
  - hostPath:
      path: /data
    name: foo
  - configMap:
      name: refresh-cm
    name: refresh-vol
