other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-02-apply-3.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    corp.org/random: 1234abcd
  name: pod03
  namespace: refresh-vols-ns
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: ghcr.io/kyverno/test-busybox:1.35
    name: busybox
