other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-step-03-apply-2.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: not-refresh-cm
  namespace: refresh-vols-ns
