other/refresh-volumes-in-pods/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: refresh-volumes-in-pods
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - apply:
        file: ../refresh-volumes-in-pods.yaml
    - apply:
        file: ns.yaml
    - apply:
        file: cm.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
    - apply:
        file: chainsaw-step-02-apply-3.yaml
    - apply:
        file: chainsaw-step-02-apply-4.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
    - apply:
        file: chainsaw-step-03-apply-2.yaml
  - name: step-04
    try:
    - sleep:
        duration: 5s
    - script:
        content: |
          annotation=$(kubectl get pod pod01 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
          if [ "$annotation" = "" ]; then exit 1; else exit 0; fi
    - script:
        content: |
          annotation=$(kubectl get pod pod02 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
          if [ "$annotation" = "1234abcd" ]; then exit 1; else exit 0; fi
    - script:
        content: |
          annotation=$(kubectl get pod pod03 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
          if [ "$annotation" = "1234abcd" ]; then exit 0; else exit 1; fi
    - script:
        content: |
          annotation=$(kubectl get pod pod04 -n refresh-vols-ns -o json | kyverno jp query "metadata.annotations.\"corp.org/random\" || '' " | tail -n 1 | cut -d '"' -f 2)
          if [ "$annotation" = "1234abcd" ]; then exit 0; else exit 1; fi
  - name: step-05
    try:
    - sleep:
        duration: 3s
    - script:
        content: |
          val=$(kubectl exec pod01 -n refresh-vols-ns -- cat /mnt/foo/foo)
          if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
    - script:
        content: |
          val=$(kubectl exec pod02 -n refresh-vols-ns -- cat /mnt/foo/foo)
          if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
    - script:
        content: |
          val=$(kubectl exec pod04 -n refresh-vols-ns -- cat /mnt/foo/foo)
          if [ "$val" = "bar" ]; then exit 0; else exit 1; fi
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n refresh-vols-ns
